syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.DS.robertproject.SmartBuildingGRPC";
option java_outer_classname = "HeatingServiceImpl";

package SmartBuildingGRPC;

service HeatingService {
  rpc initialDevice(Empty) returns (heatingResponse) {}
  
  rpc changeTemp(valRequest) returns (stream valResponse) {}
  
  rpc changeFanSpeed(valRequest) returns (stream valResponse) {}
  
  rpc onOff(boolRequest) returns (boolResponse) {}
  
  rpc changeDeviceName(stringRequest) returns (stringResponse) {}	
  
  rpc changeDeviceNameStream(stream stringRequest) returns (stream stringResponse) {}

}

message Empty {

}

message stringRequest {
	string text = 1;
}

message stringResponse {
	string text = 1;
}

message boolRequest {
	bool msg = 2;
}

message boolResponse {
	bool msg = 2;
}

message valRequest {
  int32 length = 3;
}

message valResponse {
  int32 length = 3;
}

message heatingResponse{
	string aname = 4;
	string status = 5;
	int32 temperature = 6;
	int32 speed = 7;
}