syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.DS.robertproject.SmartHomeGRPC";
option java_outer_classname = "SpeakerServiceImpl";

package SmartHomeGRPC;

// Interface exported by the server.

service SpeakerService {
  rpc initialDevice(Empty) returns (speakerResp) {}
  
  rpc changeVolume(valRequest) returns (stream valResponse) {}
  
  rpc mute(BooleanReq) returns (valResponse) {}
  
  rpc onOff(BooleanReq) returns (BooleanRes) {}
  
  rpc changeDeviceName(StringRequest) returns (StringResponse) {}
  
}

message Empty {

}

message StringRequest {
	string text = 1;
}

message StringResponse {
	string text = 1;
}

message BooleanReq {
	bool msg = 2;
}

message BooleanRes {
	bool msg = 2;
}

message valRequest {
  int32 length = 3;
}
message valResponse {
  int32 length = 3;
}
message speakerResp{
	string aname = 4;
	string status = 5;
	int32 volume = 6;
	bool muted = 7;
	
}